# homeworks

./: README.md
databases/: base.sql  drop_tables.sql
eval/: CMakeLists.txt  main.cpp  main_task.cpp  methods.cpp  methods.hpp  numeric_methods.cpp  numeric_methods.hpp  sphere.cpp  sphere_main.cpp  test_main.cpp
eval_fifth/: a.out  main.cpp
eval_fourth/: a.out  main  main.cpp
eval_fourth2/: a.out  main.cpp
eval_fourth3/: main  main.cpp  test_stress  test_stress.cpp  test_symmetry  test_symmetry.cpp
eval_second/: CMakeLists.txt  main.cpp  save.cpp
eval_third/: README.md  a.out  main.cpp  Вывод_формул_12_и_13.docx
hashtable-parallel/: CMakeLists.txt
hashtable-parallel/source/: hashtable.cpp  hashtable.hpp  main.cpp
hashtable-parallel/test/: test.cpp
logger/: CMakeLists.txt  main.cpp
logger/src/: common.hpp  cond-var-lim.hpp  cond-var-unlim.hpp  lim.hpp  message.hpp  test.hpp  unlim.hpp
matrix-parallel-det/: CMakeLists.txt  determine.cpp  determine.hpp  determine_2.cpp  main.cpp  test.cpp
matrix-parallel-det/data/: matrix_10x10.txt  matrix_4x4.txt  matrix_5x5.txt  matrix_7x7.txt
redactor/: CMakeLists.txt
redactor/source/: commands.cpp  commands.h  dataset.cpp  dataset.h  highlited.cpp  highlited.h  main.cpp  pointer.cpp  pointer.h  window.cpp  window.h  window_sizing.cpp
second_task/: CMakeLists.txt  main.cpp
task1/: .gitignore  CMakeLists.txt  determine.cpp  determine.hpp  determine_2.cpp  main.cpp  matrix.hpp
task1/data/: matrix_3x3.txt  matrix_6x6.txt  matrix_8x8.txt  matrix_9x9.txt
translating/: a.out  graph_paths  graph_paths.cpp  main.cpp
z-levels/: CMakeLists.txt  drawing.cpp  main.cpp  window.cpp  window.hpp
